fixed blog page spacing

--- a/client/src/components/Blog/Blog.module.css
+++ b/client/src/components/Blog/Blog.module.css
@@ -16,11 +16,10 @@
 .category {
   font-size: 20px;
   font-weight: bolder;
-  
 }
 
 .post{
-  margin:0 0 3% 0;  
+  margin:0 0 1% 0;  
 }
 
 
